--- a/package.json
+++ b/package.json
@@ -7,11 +7,29 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
+    "create-apk": "cd android && ./gradlew assembleRelease",
+    "link-asset": "npx react-native-asset",
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "@react-navigation/stack": "^7.1.1",
+    "lottie-react-native": "^7.2.2",
     "react": "18.3.1",
-    "react-native": "0.76.6"
+    "react-native": "0.76.6",
+    "react-native-asset": "^2.1.1",
+    "react-native-gesture-handler": "^2.22.0",
+    "react-native-mmkv": "^3.2.0",
+    "react-native-reanimated": "^3.16.7",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "^5.1.0",
+    "react-native-screens": "^4.5.0",
+    "react-native-sound-player": "^0.14.3",
+    "react-native-svg": "^15.11.1",
+    "react-native-svg-transformer": "^1.5.0",
+    "react-native-video": "^6.9.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
